Marker, popup, and font tweaks. Fix vendor tap not working on mobile.

--- a/css/styles.less
+++ b/css/styles.less
@@ -154,7 +154,7 @@ header {
     box-shadow: 0 0 6px rgba(0,0,0,0.25);
     background-color: white;
     color: black;
-    font-size: 11px;
+    font-size: 12px;
     max-height: 90%;
     overflow: auto;
     .user-select(none);
@@ -452,7 +452,11 @@ div.footer-popup {
         }
         .popup-location {
             padding: 8px;
-            border-top: 1px solid lighten(@vendor-heading-color, 30%);
+            background-color: #f6f6f6;
+            border-bottom: 1px solid #e9e9e9;
+            strong {
+                font-size: 13px;
+            }
             .address {
                 color: #888;
                 a {
@@ -472,6 +476,7 @@ div.footer-popup {
         h3 {
             margin: 0;
             padding: 0;
+            font-size: 16px;
             a {
                 color: black !important;
                 text-decoration: none;
